--- a/Travel Map Book/Base.lproj/Main.storyboard
+++ b/Travel Map Book/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R5J-7R-eyD">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,120 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Travel_Map_Book" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="cre-Z8-AmM">
+                                <rect key="frame" x="0.0" y="184" width="375" height="427"/>
+                            </mapView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of the Place" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eas-tg-ejz">
+                                <rect key="frame" x="65" y="84" width="245" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ki6-2S-J9Q">
+                                <rect key="frame" x="65" y="134" width="245" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z6t-Om-8HK">
+                                <rect key="frame" x="0.0" y="621" width="375" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Save this place"/>
+                                <connections>
+                                    <action selector="SavePlaceBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KzZ-eI-e6m"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ki6-2S-J9Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="17F-7a-9gf"/>
+                            <constraint firstItem="cre-Z8-AmM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="56j-Ku-57w"/>
+                            <constraint firstItem="Ki6-2S-J9Q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7E3-0A-y5K"/>
+                            <constraint firstItem="cre-Z8-AmM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AU6-Uh-0OC"/>
+                            <constraint firstItem="eas-tg-ejz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="AdG-sK-YKI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eas-tg-ejz" secondAttribute="trailing" constant="65" id="Dbh-Td-7uG"/>
+                            <constraint firstItem="Z6t-Om-8HK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GZ3-wD-6tk"/>
+                            <constraint firstItem="Z6t-Om-8HK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LNi-H1-qac"/>
+                            <constraint firstItem="eas-tg-ejz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OSH-KM-PTW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ki6-2S-J9Q" secondAttribute="trailing" constant="65" id="OVB-XV-z3z"/>
+                            <constraint firstItem="Z6t-Om-8HK" firstAttribute="top" secondItem="cre-Z8-AmM" secondAttribute="bottom" constant="10" id="Wb6-V4-ieZ"/>
+                            <constraint firstItem="Ki6-2S-J9Q" firstAttribute="top" secondItem="eas-tg-ejz" secondAttribute="bottom" constant="20" id="agN-8G-Gi5"/>
+                            <constraint firstItem="cre-Z8-AmM" firstAttribute="top" secondItem="Ki6-2S-J9Q" secondAttribute="bottom" constant="20" id="dTO-jN-oGx"/>
+                            <constraint firstItem="eas-tg-ejz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="k0F-dW-X13"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Z6t-Om-8HK" secondAttribute="bottom" constant="10" id="xHU-EJ-mMu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="commentText" destination="Ki6-2S-J9Q" id="f20-BP-801"/>
+                        <outlet property="mapView" destination="cre-Z8-AmM" id="bxB-lE-she"/>
+                        <outlet property="nameText" destination="eas-tg-ejz" id="xfJ-Wo-fKO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2728.8000000000002" y="133.5832083958021"/>
+        </scene>
+        <!--First View Controller-->
+        <scene sceneID="rWa-oh-Bqq">
+            <objects>
+                <viewController id="O46-7g-GOi" customClass="firstViewController" customModule="Travel_Map_Book" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j7I-eo-ddr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5A7-0x-zSn">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5A7-0x-zSn" firstAttribute="top" secondItem="36R-qa-otz" secondAttribute="top" id="2Zk-LU-MOw"/>
+                            <constraint firstItem="5A7-0x-zSn" firstAttribute="bottom" secondItem="36R-qa-otz" secondAttribute="bottom" id="K3Y-tl-Wh6"/>
+                            <constraint firstItem="5A7-0x-zSn" firstAttribute="trailing" secondItem="36R-qa-otz" secondAttribute="trailing" id="aIS-0h-iVV"/>
+                            <constraint firstItem="5A7-0x-zSn" firstAttribute="leading" secondItem="36R-qa-otz" secondAttribute="leading" id="kkB-Zm-KfU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="36R-qa-otz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="G6i-YE-VIN">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="pQr-Yf-3Rt">
+                            <connections>
+                                <action selector="addBtnClicked:" destination="O46-7g-GOi" id="I7c-e1-SEk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="5A7-0x-zSn" id="hPH-D8-FnS"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toMapVC" id="GPM-Hm-Hoy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4nG-za-RTM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1876" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LO4-QK-Bgz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R5J-7R-eyD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2Yo-s7-Itx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="O46-7g-GOi" kind="relationship" relationship="rootViewController" id="iXy-31-X3I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qLW-kO-Fxm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="936.79999999999995" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
